added rating component and adding map to search component

--- a/BIZspot-frontend/src/app/search/search.component.html
+++ b/BIZspot-frontend/src/app/search/search.component.html
@@ -1,243 +1,249 @@
 <main class="search">
-	<div class="row search-box-up">
-		<form id="searchForm" class="search-form" [formGroup]="searchForm" (submit)="onSearch()" >
-			<input type="search" value="" placeholder="Search ..." class="search-input search-input--main" formControlName="term" >
-			<input type="text" value="" placeholder="Category" class="search-input" formControlName="category" >
-			<input type="text" value="" placeholder="Stars" class="search-input" formControlName="stars" >
-			<input type="text" value="" placeholder="Reviews" class="search-input" formControlName="reviews" >
-			<div class="search-form-actions">
+  <div class="row search-box-up">
+    <form id="searchForm" class="search-form" [formGroup]="searchForm" (submit)="onSearch()">
+      <input type="search" value="" placeholder="Search ..." class="search-input search-input--main" formControlName="term">
+      <input type="text" value="" placeholder="Category" class="search-input" formControlName="category">
+      <input type="text" value="" placeholder="Stars" class="search-input" formControlName="stars">
+      <input type="text" value="" placeholder="Reviews" class="search-input" formControlName="reviews">
+      <div class="search-form-actions">
 
-				<a href="/search#popup"  class="search-btn search-btn--stroked">Choose location</a>				<input type="submit" value="Search" class="search-btn">
-			</div>
-		</form>
-	</div>
-	<div class="row search-box-down">
-		<div class="col-1-of-3">
+        <a href="/search#popup" class="search-btn search-btn--stroked">Choose location</a>
+        <input type="submit" value="Search" class="search-btn">
+      </div>
+    </form>
+  </div>
+  <div class="row search-box-down">
+    <div class="col-1-of-3">
 
-			<div class="business">
-				<div class="business-box">
+      <div class="business">
+        <div class="business-box">
 
-					<div class="business-picture">
-						<img src="assets/img/business.jpg" alt="">
-					</div>
-					<div class="business-data">
-						<h2 class="business-title">
-							Restaurant
-						</h2>
-						<p class="business-description">
-							Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-							Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis
-							aute irure dolor in reprehenderit in voluptate velit esse
-						</p>
-						<a href="#" class="business-btn">Details</a>
-					</div>
-				</div>
-				<a href="" class="review-btn">&#17;</a>
+          <div class="business-picture">
+            <img src="assets/img/business.jpg" alt="">
+          </div>
+          <div class="business-data">
+            <h2 class="business-title">
+              Restaurant
+            </h2>
+            <p class="business-description">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+              Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+              Duis aute irure dolor in reprehenderit in voluptate velit esse
+            </p>
+            <a href="#" class="business-btn">Details</a>
+          </div>
+        </div>
+        <a href="" class="review-btn">&#17;</a>
 
-			</div>
-
-
-			<div class="business">
-				<div class="business-box">
-
-					<div class="business-picture">
-						<img src="assets/img/business.jpg" alt="">
-					</div>
-					<div class="business-data">
-						<h2 class="business-title">
-							Restaurant
-						</h2>
-						<p class="business-description">
-							Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-							Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis
-							aute irure dolor in reprehenderit in voluptate velit esse
-						</p>
-						<a href="#" class="business-btn">Details</a>
-					</div>
-				</div>
-				<a href="" class="review-btn">&#17;</a>
-
-			</div>
-
-			<div class="business">
-				<div class="business-box">
-
-					<div class="business-picture">
-						<img src="assets/img/business.jpg" alt="">
-					</div>
-					<div class="business-data">
-						<h2 class="business-title">
-							Restaurant
-						</h2>
-						<p class="business-description">
-							Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-							Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis
-							aute irure dolor in reprehenderit in voluptate velit esse
-						</p>
-						<a href="#" class="business-btn">Details</a>
-					</div>
-				</div>
-				<a href="" class="review-btn">&#17;</a>
-
-			</div>
+      </div>
 
 
-			<div class="business">
-				<div class="business-box">
+      <div class="business">
+        <div class="business-box">
 
-					<div class="business-picture">
-						<img src="assets/img/business.jpg" alt="">
-					</div>
-					<div class="business-data">
-						<h2 class="business-title">
-							Restaurant
-						</h2>
-						<p class="business-description">
-							Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-							Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis
-							aute irure dolor in reprehenderit in voluptate velit esse
-						</p>
-						<a href="#" class="business-btn">Details</a>
-					</div>
-				</div>
-				<a href="" class="review-btn">&#17;</a>
+          <div class="business-picture">
+            <img src="assets/img/business.jpg" alt="">
+          </div>
+          <div class="business-data">
+            <h2 class="business-title">
+              Restaurant
+            </h2>
+            <p class="business-description">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+              Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+              Duis aute irure dolor in reprehenderit in voluptate velit esse
+            </p>
+            <a href="#" class="business-btn">Details</a>
+          </div>
+        </div>
+        <a href="" class="review-btn">&#17;</a>
 
-			</div>
-		</div>
-		<div class="col-1-of-3">
-			<div class="business">
-				<div class="business-box">
+      </div>
 
-					<div class="business-picture">
-						<img src="assets/img/business.jpg" alt="">
-					</div>
-					<div class="business-data">
-						<h2 class="business-title">
-							Restaurant
-						</h2>
-						<p class="business-description">
-							Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-							Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis
-							aute irure dolor in reprehenderit in voluptate velit esse
-						</p>
-						<a href="#" class="business-btn">Details</a>
-					</div>
-				</div>
-				<a href="" class="review-btn">&#17;</a>
+      <div class="business">
+        <div class="business-box">
 
-			</div>
-			<div class="business">
-				<div class="business-box">
+          <div class="business-picture">
+            <img src="assets/img/business.jpg" alt="">
+          </div>
+          <div class="business-data">
+            <h2 class="business-title">
+              Restaurant
+            </h2>
+            <p class="business-description">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+              Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+              Duis aute irure dolor in reprehenderit in voluptate velit esse
+            </p>
+            <a href="#" class="business-btn">Details</a>
+          </div>
+        </div>
+        <a href="" class="review-btn">&#17;</a>
 
-					<div class="business-picture">
-						<img src="assets/img/business.jpg" alt="">
-					</div>
-					<div class="business-data">
-						<h2 class="business-title">
-							Restaurant
-						</h2>
-						<p class="business-description">
-							Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-							Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis
-							aute irure dolor in reprehenderit in voluptate velit esse
-						</p>
-						<a href="#" class="business-btn">Details</a>
-					</div>
-				</div>
-				<a href="" class="review-btn">&#17;</a>
+      </div>
 
-			</div>
-			<div class="business">
-				<div class="business-box">
 
-					<div class="business-picture">
-						<img src="assets/img/business.jpg" alt="">
-					</div>
-					<div class="business-data">
-						<h2 class="business-title">
-							Restaurant
-						</h2>
-						<p class="business-description">
-							Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-							Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis
-							aute irure dolor in reprehenderit in voluptate velit esse
-						</p>
-						<a href="#" class="business-btn">Details</a>
-					</div>
-				</div>
-				<a href="" class="review-btn">&#17;</a>
+      <div class="business">
+        <div class="business-box">
 
-			</div>
-		</div>
-		<div class="col-1-of-3">
-			<div class="business">
-				<div class="business-box">
+          <div class="business-picture">
+            <img src="assets/img/business.jpg" alt="">
+          </div>
+          <div class="business-data">
+            <h2 class="business-title">
+              Restaurant
+            </h2>
+            <p class="business-description">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+              Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+              Duis aute irure dolor in reprehenderit in voluptate velit esse
+            </p>
+            <a href="#" class="business-btn">Details</a>
+          </div>
+        </div>
+        <a href="" class="review-btn">&#17;</a>
 
-					<div class="business-picture">
-						<img src="assets/img/business.jpg" alt="">
-					</div>
-					<div class="business-data">
-						<h2 class="business-title">
-							Restaurant
-						</h2>
-						<p class="business-description">
-							Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-							Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis
-							aute irure dolor in reprehenderit in voluptate velit esse
-						</p>
-						<a href="#" class="business-btn">Details</a>
-					</div>
-				</div>
-				<a href="" class="review-btn">&#17;</a>
+      </div>
+    </div>
+    <div class="col-1-of-3">
+      <div class="business">
+        <div class="business-box">
 
-			</div>
-			<div class="business">
-				<div class="business-box">
+          <div class="business-picture">
+            <img src="assets/img/business.jpg" alt="">
+          </div>
+          <div class="business-data">
+            <h2 class="business-title">
+              Restaurant
+            </h2>
+            <p class="business-description">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+              Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+              Duis aute irure dolor in reprehenderit in voluptate velit esse
+            </p>
+            <a href="#" class="business-btn">Details</a>
+          </div>
+        </div>
+        <a href="" class="review-btn">&#17;</a>
 
-					<div class="business-picture">
-						<img src="assets/img/business.jpg" alt="">
-					</div>
-					<div class="business-data">
-						<h2 class="business-title">
-							Restaurant
-						</h2>
-						<p class="business-description">
-							Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-							Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis
-							aute irure dolor in reprehenderit in voluptate velit esse
-						</p>
-						<a href="#" class="business-btn">Details</a>
-					</div>
-				</div>
-				<a href="" class="review-btn">&#17;</a>
+      </div>
+      <div class="business">
+        <div class="business-box">
 
-			</div>
-		</div>
-	</div>
+          <div class="business-picture">
+            <img src="assets/img/business.jpg" alt="">
+          </div>
+          <div class="business-data">
+            <h2 class="business-title">
+              Restaurant
+            </h2>
+            <p class="business-description">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+              Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+              Duis aute irure dolor in reprehenderit in voluptate velit esse
+            </p>
+            <a href="#" class="business-btn">Details</a>
+          </div>
+        </div>
+        <a href="" class="review-btn">&#17;</a>
+
+      </div>
+      <div class="business">
+        <div class="business-box">
+
+          <div class="business-picture">
+            <img src="assets/img/business.jpg" alt="">
+          </div>
+          <div class="business-data">
+            <h2 class="business-title">
+              Restaurant
+            </h2>
+            <p class="business-description">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+              Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+              Duis aute irure dolor in reprehenderit in voluptate velit esse
+            </p>
+            <a href="#" class="business-btn">Details</a>
+          </div>
+        </div>
+        <a href="" class="review-btn">&#17;</a>
+
+      </div>
+    </div>
+    <div class="col-1-of-3">
+      <div class="business">
+        <div class="business-box">
+
+          <div class="business-picture">
+            <img src="assets/img/business.jpg" alt="">
+          </div>
+          <div class="business-data">
+            <h2 class="business-title">
+              Restaurant
+            </h2>
+            <p class="business-description">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+              Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+              Duis aute irure dolor in reprehenderit in voluptate velit esse
+            </p>
+            <a href="#" class="business-btn">Details</a>
+          </div>
+        </div>
+        <a href="" class="review-btn">&#17;</a>
+
+      </div>
+      <div class="business">
+        <div class="business-box">
+
+          <div class="business-picture">
+            <img src="assets/img/business.jpg" alt="">
+          </div>
+          <div class="business-data">
+            <h2 class="business-title">
+              Restaurant
+            </h2>
+            <p class="business-description">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+              Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+              Duis aute irure dolor in reprehenderit in voluptate velit esse
+            </p>
+            <a href="#" class="business-btn">Details</a>
+          </div>
+        </div>
+        <a href="" class="review-btn">&#17;</a>
+
+      </div>
+    </div>
+  </div>
 </main>
 <!-- The popup for getting the specified location -->
 <div class="popup" id="popup">
-	<a href="/search" class="popup__close">&times;</a>
-	<div class="popup__content">
+  <a href="/search" class="popup__close">&times;</a>
+  <div class="popup__content">
 
 
-		<form class="popup__form" [formGroup]="locationForm" (submit)="onLocationSubmit()">
-			<input formControlName="number" type="text" placeholder="Number" class="search-input">
-			<input formControlName="street" type="text" value="" placeholder="Street Name" class="search-input">
-			<input formControlName="city" type="text" value="" placeholder="City" class="search-input">
-			<input formControlName="country" type="text" value="" placeholder="Country" class="search-input">
-			<!--<input type="text" value="" placeholder="Search address" class="search-input search-input--secondary">-->
-			<div class="popup__form-actions">
+    <form class="popup__form" [formGroup]="locationForm" (submit)="onLocationSubmit()">
+      <input formControlName="number" type="text" placeholder="Number" class="search-input">
+      <input formControlName="street" type="text" value="" placeholder="Street Name" class="search-input">
+      <input formControlName="city" type="text" value="" placeholder="City" class="search-input">
+      <input formControlName="country" type="text" value="" placeholder="Country" class="search-input">
+      <!--<input type="text" value="" placeholder="Search address" class="search-input search-input--secondary">-->
+      <div class="popup__form-actions">
 
-				<input type="button" value="Search" class="search-btn search-btn--stroked">
-				<input type="button" value="Accept Location" class="search-btn">
-				
-			</div>
-		</form>
+        <input type="submit" value="Search" class="search-btn search-btn--stroked">
+        <input type="button" value="Accept Location" class="search-btn">
+
+      </div>
+    </form>
 
 
-		<div class="business-page-map">
 
-		</div>
-	</div>
+    <agm-map (mapClick)="mapLocationChanged($event)" class="business-page-map" [latitude]="locationLat" [longitude]="locationLng">
+      <div *ngIf="locationFound">
+
+        <agm-marker [latitude]="locationLat" [longitude]="locationLng" [label]="'M'"></agm-marker> `
+      </div>
+    </agm-map>
+
+  </div>
 </div>
