--- a/BIZspot-frontend/src/app/subscriptions-list/subscriptions-list.component.html
+++ b/BIZspot-frontend/src/app/subscriptions-list/subscriptions-list.component.html
@@ -1,3 +1,3 @@
-<main *ngFor="let business of this.subscribedBusinesses; let i = index" class="row">
+<div *ngFor="let business of this.subscribedBusinesses; let i = index">
 	<app-subscription [business]="business" [subscriptionId]="this.subscriptionsIds[i]"></app-subscription>
-</main>
+</div>
