--- a/BIZspot-frontend/src/styles.css
+++ b/BIZspot-frontend/src/styles.css
@@ -1819,85 +1819,77 @@ only screen and (hover: none) {
 }
 
 .feed {
-  display: grid;
-  padding: 0 10rem;
-  grid-template-columns: 3fr 1fr;
-  grid-template-rows: 100vh;
-}
-
-.feed-main {
-  background-color: #f7f7f7;
-  overflow: hidden;
-}
-
-.feed-element-box {
-  margin: 1rem auto 0 auto;
-  max-height: 100%;
-  padding: 0rem 8rem;
+  display: block;
+  width: 100vw;
   overflow-y: scroll;
-}
-
-.feed-suggestion {
-  display: inline-block;
-  height: 75%;
-  max-width: 10rem;
-}
-
-.feed-suggestion>img {
-  display: block;
-  width: 100%;
-  height: 100%;
-}
-
-.feed-suggestion-box {
-  margin-top: 3rem;
-  display: flex;
-  align-items: center;
-  justify-content: space-around;
-  background-color: #2d3a71;
-  min-width: 100%;
-  height: 10vh;
-}
-
-.feed-user {
-  margin-top: 3rem;
-}
-
-.feed-user-avatar {
-  display: block;
-  margin: 0 auto;
-  width: 15rem;
-  height: 15rem;
-  border: 0.3rem solid #5be89b;
-  background-image: url(assets/img/avatar.jpg);
-  border-radius: 50%;
-  background-size: cover;
-}
-
-.feed-section {
-  background-color: #252d2f;
-}
-
-.feed-section-fav {
-  list-style: none;
-  display: inline-block;
-  margin: 3rem auto;
-  width: 100%;
-  text-align: center;
-}
-
-.feed-section-fav>li>a:link,
-.feed-section-fav>li>a:visited {
-  text-decoration: none;
-  list-style: none;
-  font-size: 1rem;
-  color: #fff;
-}
-
-.feed-section-fav>li {
-  padding-top: 1.5rem;
-  display: block;
-}
+  background-color: #eeeeee; }
+  .feed-main {
+    background-color: #f7f7f7;
+    width: 75%;
+    margin: 0 auto;
+    overflow-y: scroll; }
+  .feed-element-box {
+    margin: 0 auto;
+    max-width: 1200px;
+    max-height: 100%;
+    padding: 0rem  8rem;
+    overflow-y: scroll; }
+  .feed-user {
+    margin-top: 2rem; }
+    .feed-user-avatar {
+      display: block;
+      margin: 0 auto;
+      width: 10rem;
+      height: 10rem;
+      overflow: hidden;
+      border: 0.2rem solid #2d3a71;
+      border-radius: 50%; }
+      .feed-user-avatar > img {
+        width: 100%;
+        height: auto; }
+  .feed-top {
+    margin-top: 2rem; }
+    .feed-top-avatar {
+      display: block;
+      margin: 0 auto;
+      width: 15rem;
+      height: 10rem;
+      overflow: hidden;
+      border: 0.2rem solid #5be89b; }
+      .feed-top-avatar > img {
+        width: 100%;
+        height: auto; }
+  .feed-section-left {
+    background-color: #252d2f;
+    min-width: 200px;
+    min-height: 40vh;
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    text-align: center; }
+    .feed-section-left-title {
+      padding-top: 1rem;
+      color: #5be89b;
+      font-size: 1.8rem;
+      font-weight: lighter; }
+    .feed-section-left-text {
+      margin-top: 2rem;
+      font-size: 1.6rem;
+      color: #fff;
+      font-weight: 100; }
+  .feed-section-right {
+    background-color: #252d2f;
+    min-width: 200px;
+    min-height: 40vh;
+    text-align: center;
+    position: fixed;
+    bottom: 0;
+    right: 0; }
+    .feed-section-right-text {
+      margin-top: 2rem;
+      font-size: 1.6rem;
+      color: #fff;
+      font-weight: 200; }
 
 .business-page {
   display: block;
